# bluesky-feed-smart-home

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  pytest.ini  renovate.json  tsconfig.json
.devcontainer/: devcontainer.json
.github/workflows/: test.yml  update-feed.yml
data/: blacklist.txt  keywords.txt  promotional_domains.txt
functions/xrpc/: app.bsky.feed.getFeedSkeleton.js  app.bsky.feed.getFeedSkeleton.test.ts  app.bsky.feed.getFeedSkeleton.ts
output/: _headers
scripts/: export_posts.py  fetch_sample_data.py  publish_feed.py  update_feed.py
src/: algorithm.py  config.py  filters.py  generator.py  scoring.py  search.py
tests/: __init__.py  conftest.py  test_algorithm.py  test_filters.py  test_generator.py  test_integration.py  test_scoring.py  test_search.py
