[project]
name = "bluesky-feed-smart-home"
version = "0.1.0"
description = "Bluesky feed generator for smart home and home automation content"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "atproto>=0.0.55",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
