[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bluesky-feed-smart-home"
version = "0.1.0"
description = "Bluesky feed generator for smart home and home automation content"
requires-python = ">=3.14"
dependencies = [
    "atproto>=0.0.55",
    "python-dotenv>=1.0.0",
    "aiofiles>=24.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
# Test discovery patterns
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
# Asyncio mode for pytest-asyncio
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# Markers
markers = [
    "integration: Integration tests that call the real API (may be slow, require credentials)",
    "unit: Fast unit tests with mocks (default)",
]
# Output options - by default, skip integration tests (run them with: pytest -m integration)
addopts = "-v --strict-markers --tb=short --disable-warnings -m 'not integration'"
# Test paths
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
]
